<?xml version="1.0"?>
<package format="3">
  <name>alice3_mujoco</name>
  <version>0.0.1</version>
  <description>alice3_mujoco</description>

  <maintainer email="pjsyukizang@hanyang.ac.kr">pjs</maintainer>
  <license>Apache 2.0</license>

  <author email="pjsyukizang@hanyang.ac.kr">pjs</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>alice3_ft_sensor_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
